made sim faster and added 2000 more steps

--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
                 <strong>data visualization</strong> and
                 <strong>scientific communication</strong>.</p>
             <p>When I am not in "school mode" I love to bike places, read science fiction and look at cool buildings.</p>
-            <p>The crazy lines at the begining of this page is a random walk drawing its next direction from a simple uniform distribution of radians. It is running for 5000 steps and it's all calculated in your computer's (or phone's) browser.
+            <p>The crazy lines at the begining of this page is a random walk drawing its next direction from a simple uniform distribution of radians. It is running for 7000 steps and it's all calculated in your computer's (or phone's) browser.
+                Click on the simulation to generate a new one. 
                 To learn more about random walks see <a href="https://en.wikipedia.org/wiki/Random_walk">here.</a>
             </p>
 
