fixed a typo and added some about me info

--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
                 If you want to read about me and my pursuits in a more eloquently written form, I was recently <a href = "http://www.uvm.edu/newsstories/news/deeper_story_data">profiled</a> by my alma mater.
             </p>
             <p>
-                When I am not in "school mode" I love to bike places, read science fiction and look at cool buildings.
+                When I am not in "school mode" I love to bike places, read science fiction and wander around gardens/musuems.
             </p>
-            <p>The crazy line at the begining of this page is a random walk. At each step it moves a single unit in a random direction. I am letting it run for 5000 steps and letting you computer's (or phone's) browser do all the calculations.
+            <p>The crazy line at the begining of this page is a random walk. At each step it moves a single unit in a random direction. I am letting it run for 5000 steps and letting your computer's (or phone's) browser do all the calculations.
                 Click on the simulation to generate a new one.
                 To learn more about random walks see <a href="https://en.wikipedia.org/wiki/Random_walk">here.</a>
             </p>
